feat: action added

--- a/.github/workflows/calibreapp-image-actions.yml
+++ b/.github/workflows/calibreapp-image-actions.yml
@@ -10,3 +10,8 @@ jobs:
         uses: docker://calibreapp/github-image-actions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  wip:
+    name: "Set status"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: wip/action@master
